--- a/visualisation.qmd
+++ b/visualisation.qmd
@@ -623,7 +623,7 @@ ggplot(graph_data, aes(x = Common, y = pre_rise_min, fill = Species)) +
 
 ## Standard Graphs
 
-Bar charts (@fig-plots-1) and pie charts (@fig-plots-2) are part of the standard repertoire for reporting bat surveys. These _flat_ graphs can be hard to interpret when there are a large number of variables to display, as in this case with the number of different species in @fig-plots; and/or a high value, such as the _Pipistrellus pipistrellus_ species in @fig-plots, that can _hide_ other values.  These bar and pie charts are more effective when they are interactive, as demonstrated on the "Interactive Reports" page^[<https://bat-survey-reporting.netlify.app/dynamic.html>].
+Bar charts (@fig-plots-1) and pie charts (@fig-plots-2) are part of the standard repertoire for reporting bat surveys. These _flat_ graphs can be hard to interpret when there are a large number of variables to display, as in this case with the number of different species in @fig-plots; and/or a high value, such as the _Pipistrellus pipistrellus_ species in @fig-plots, that can _hide_ other values.  These charts are more effective when they are interactive; example [pie chart](https://bat-survey-reporting.netlify.app/dynamic.html#pie-chart) and [bar charts](https://bat-survey-reporting.netlify.app/dynamic.html#bar-chart) are demonstrated on the [Interactive Reports](https://bat-survey-reporting.netlify.app/dynamic.html) page.
 
 ```{r}
 #| label: fig-plots
