Data validation sections added (tidy and resources pages).

--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
@@ -19,15 +19,15 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2023},
-  note = {R package version 1.0.3},
+  note = {R package version 1.0.4},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2022},
-  note = {R package version 1.0.10},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {R package version 1.1.0},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -59,15 +59,15 @@
   title = {flextable: Functions for Tabular Reporting},
   author = {David Gohel and Panagiotis Skintzos},
   year = {2023},
-  note = {R package version 0.8.4},
+  note = {R package version 0.9.0},
   url = {https://CRAN.R-project.org/package=flextable},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2022},
-  note = {R package version 3.4.0},
+  year = {2023},
+  note = {R package version 3.4.1},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
@@ -75,8 +75,8 @@
   title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
 ggplot2},
   author = {Kamil Slowikowski},
-  year = {2022},
-  note = {R package version 0.9.2},
+  year = {2023},
+  note = {R package version 0.9.3},
   url = {https://github.com/slowkow/ggrepel},
 }
 
@@ -139,8 +139,8 @@ ggplot2},
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 1.41},
+  year = {2023},
+  note = {R package version 1.42},
   url = {https://yihui.org/knitr/},
 }
 
@@ -148,8 +148,8 @@ ggplot2},
   title = {leaflet: Create Interactive Web Maps with the JavaScript Leaflet
 Library},
   author = {Joe Cheng and Bhaskar Karambelkar and Yihui Xie},
-  year = {2022},
-  note = {R package version 2.1.1},
+  year = {2023},
+  note = {R package version 2.1.2},
   url = {https://rstudio.github.io/leaflet/},
 }
 
@@ -157,7 +157,7 @@ Library},
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
   year = {2023},
-  note = {R package version 1.9.1},
+  note = {R package version 1.9.2},
   url = {https://CRAN.R-project.org/package=lubridate},
 }
 
@@ -189,16 +189,16 @@ Library},
   title = {officer: Manipulation of Microsoft Word and PowerPoint Documents},
   author = {David Gohel},
   year = {2023},
-  note = {R package version 0.5.1},
+  note = {R package version 0.6.1},
   url = {https://CRAN.R-project.org/package=officer},
 }
 
 @Manual{R-osmdata,
   title = {osmdata: Import OpenStreetMap Data as Simple Features or Spatial
 Objects},
-  author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon},
-  year = {2022},
-  note = {R package version 0.1.10},
+  author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon and Joan Maspons},
+  year = {2023},
+  note = {R package version 0.2.1},
   url = {https://CRAN.R-project.org/package=osmdata},
 }
 
@@ -214,7 +214,7 @@ Objects},
   title = {raster: Geographic Data Analysis and Modeling},
   author = {Robert J. Hijmans},
   year = {2023},
-  note = {R package version 3.6-14},
+  note = {R package version 3.6-20},
   url = {https://rspatial.org/raster},
 }
 
@@ -222,23 +222,23 @@ Objects},
   title = {reactable: Interactive Data Tables for R},
   author = {Greg Lin},
   year = {2023},
-  note = {R package version 0.4.3},
+  note = {R package version 0.4.4},
   url = {https://CRAN.R-project.org/package=reactable},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2022},
-  note = {R package version 2.1.3},
+  year = {2023},
+  note = {R package version 2.1.4},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{R-readxl,
   title = {readxl: Read Excel Files},
   author = {Hadley Wickham and Jennifer Bryan},
-  year = {2022},
-  note = {R package version 1.4.1},
+  year = {2023},
+  note = {R package version 1.4.2},
   url = {https://CRAN.R-project.org/package=readxl},
 }
 
@@ -270,8 +270,8 @@ https://github.com/ropensci/rnaturalearth},
 @Manual{R-sf,
   title = {sf: Simple Features for R},
   author = {Edzer Pebesma},
-  year = {2022},
-  note = {R package version 1.0-9},
+  year = {2023},
+  note = {R package version 1.0-11},
   url = {https://CRAN.R-project.org/package=sf},
 }
 
@@ -304,31 +304,31 @@ Phase},
   title = {terra: Spatial Data Analysis},
   author = {Robert J. Hijmans},
   year = {2023},
-  note = {R package version 1.6-53},
+  note = {R package version 1.7-18},
   url = {https://rspatial.org/terra/},
 }
 
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2022},
-  note = {R package version 3.1.8},
+  year = {2023},
+  note = {R package version 3.2.1},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Maximilian Girlich},
-  year = {2022},
-  note = {R package version 1.2.1},
+  author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
+  year = {2023},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2022},
-  note = {R package version 1.3.2},
+  year = {2023},
+  note = {R package version 2.0.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
@@ -336,9 +336,17 @@ Phase},
   title = {tinytex: Helper Functions to Install and Maintain TeX Live, and Compile
 LaTeX Documents},
   author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 0.43},
+  year = {2023},
+  note = {R package version 0.44},
   url = {https://github.com/rstudio/tinytex},
+}
+
+@Manual{R-validate,
+  title = {validate: Data Validation Infrastructure},
+  author = {Mark {van der Loo} and Edwin {de Jonge}},
+  year = {2022},
+  note = {R package version 1.1.1},
+  url = {https://github.com/data-cleaning/validate},
 }
 
 @Manual{R-vegan,
@@ -377,7 +385,6 @@ LaTeX Documents},
   publisher = {Chapman and Hall/CRC},
   year = {2014},
   note = {ISBN 978-1466561595},
-  url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
 @Article{lubridate2011,
@@ -402,9 +409,9 @@ LaTeX Documents},
   url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
 }
 
-@Article{osmdata2017,
+@Manual{osmdata2017,
   title = {osmdata},
-  author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon},
+  author = {{Mark Padgham} and {Bob Rudis} and {Robin Lovelace} and {Maëlle Salmon}},
   journal = {The Journal of Open Source Software},
   year = {2017},
   volume = {2},
@@ -456,6 +463,15 @@ LaTeX Documents},
   number = {1},
 }
 
+@Book{sf2023,
+  author = {Edzer Pebesma and Roger Bivand},
+  title = {{Spatial Data Science: With applications in R}},
+  year = {2023},
+  publisher = {{Chapman and Hall/CRC}},
+  url = {https://r-spatial.org/book/},
+  pages = {352},
+}
+
 @Article{tidyverse2019,
   title = {Welcome to the {tidyverse}},
   author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
@@ -476,5 +492,16 @@ LaTeX Documents},
   number = {1},
   pages = {30--32},
   url = {https://tug.org/TUGboat/Contents/contents40-1.html},
+}
+
+@Article{validate2021,
+  title = {Data Validation Infrastructure for {R}},
+  author = {Mark P. J. {van der Loo} and Edwin {de Jonge}},
+  journal = {Journal of Statistical Software},
+  year = {2021},
+  volume = {97},
+  number = {10},
+  pages = {1--31},
+  doi = {10.18637/jss.v097.i10},
 }
 
