Bootstrap confidence intervals added.

--- a/packages.bib
+++ b/packages.bib
@@ -128,6 +128,14 @@ ggplot2},
   url = {https://CRAN.R-project.org/package=hms},
 }
 
+@Manual{R-infer,
+  title = {infer: Tidy Statistical Inference},
+  author = {Andrew Bray and Chester Ismay and Evgeni Chasnovski and Simon Couch and Ben Baumer and Mine Cetinkaya-Rundel},
+  year = {2022},
+  note = {R package version 1.0.4},
+  url = {https://CRAN.R-project.org/package=infer},
+}
+
 @Manual{R-kableExtra,
   title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
   author = {Hao Zhu},
@@ -364,6 +372,17 @@ LaTeX Documents},
   year = {2016},
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
+}
+
+@Article{infer2021,
+  title = {{infer}: An {R} package for tidyverse-friendly statistical inference},
+  author = {Simon P. Couch and Andrew P. Bray and Chester Ismay and Evgeni Chasnovski and Benjamin S. Baumer and Mine Çetinkaya-Rundel},
+  journal = {Journal of Open Source Software},
+  year = {2021},
+  volume = {6},
+  number = {65},
+  pages = {3661},
+  doi = {10.21105/joss.03661},
 }
 
 @Book{knitr2015,
