--- a/resources.qmd
+++ b/resources.qmd
@@ -59,7 +59,8 @@ knitr::write_bib(c('base',
                    'osmdata',
                    'kableExtra',
                    'tinytex',
-                   'validate'), bib_loc)
+                   'validate', 
+                   "infer"), bib_loc)
 
 #Then add `bibliography: packages.bib` to the YAML frontmatter. Now you can cite packages. For example: the R language [@R-base] is awesome. We used the **knitr** package [@R-knitr; @knitr2015] in our analysis. We also build a Shiny app [@R-shiny].
 
@@ -196,6 +197,8 @@ Summary statistics have been produced with the [`mosaic`](https://www.mosaic-web
 [`broom`](https://cran.r-project.org/web/packages/broom/vignettes/broom.html) [@R-broom] a package that takes the messy output of built-in functions in R and turns them into tidy tibbles; these can be easily tabulated.
 
 [`dunn.test`](https://www.rdocumentation.org/packages/dunn.test/versions/1.3.5/topics/dunn.test) [@R-dunn.test] a package that performs Dunn's test of multiple comparisons using rank sums.
+
+[`infer`](https://infer.netlify.app/) [@R-infer] a package for statistical inference that coheres with the tidyverse design framework, for example bootstrapping.
 
 [`vegan`](https://cran.r-project.org/web/packages/vegan/index.html) [@R-vegan] package of ordination methods, diversity analysis and other functions for community and vegetation ecologists.
 
